--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>PAGE TITLE</title> <!-- DON'T FORGET THE TITLE -->
+      <title>SJU Womens Basketball</title>
+        <header>SJU Womens Basketball</header><!-- DON'T FORGET THE TITLE -->
 
       <!-- Link to CSS files -->
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
+        <img src="img/funnyteam.JPG">
+             <a href="aboutteam.html">Roster</a>
+        <img src="img/chop2014.jpg">
+        <a href="outreach.html">Community Outreach</a>
+        
+        <a href="history.html">History</a>
+        <img src="img/ontheroad2014.jpg">
+        <a href="ontheroad.html">On the Road</a>
     <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
 
-    <h1>This is my heading</h1>
+    <h1></h1>
 
-    <p>This is a paragraph</p> 
+    <p></p> 
 
     <!-- AND ABOVE HERE -->
     </body>
