--- a/history.html
+++ b/history.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>SJU Womens Basketball</title>
-        <header>SJU Womens Basketball</header><!-- DON'T FORGET THE TITLE -->
+        <!-- DON'T FORGET THE TITLE -->
 
-      <!-- Link to CSS files -->
+      <!-- Link to CSS files --><link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-    <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
-
-    <h1>Past Seasons</h1>
+        
+             <header>SJU Womens Basketball</header>
+ <ul class="index">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="aboutteam.html">Team</a></li>
+  <li><a href="outreach.html">Community Outreach</a></li>
+  <li><a href="ontheroad.html">On the road</a></li>
+</ul>
+    <h1>History</h1>
 
     <p></p> 
+        <div class="image6"><img src="img/MI+Susan+Moran+Unsung+Heroes.jpg" alt="Susan Moran"><p>Susan Moran</p>
+        <img src="img/wbba10_201303.jpg" alt="2013 A10 champions"><p>2013 A10 Champions</p>
+        <img src="img/womenNCAA1.JPG" alt="2014 watch party"><p>2014 NCAA watch party</p></div>
 
-    <!-- AND ABOVE HERE -->
+        
     </body>
-</html>
+    </html>
