--- a/ontheroad.html
+++ b/ontheroad.html
@@ -6,16 +6,24 @@
       <title>SJU Womens Basketball</title>
         <header>SJU Womens Basketball</header><!-- DON'T FORGET THE TITLE -->
 
-      <!-- Link to CSS files -->
+      <!-- Link to CSS files --><link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
     <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
-
+ <ul class="index">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="aboutteam.html">Team</a></li>
+  <li><a href="outreach.html">Community Outreach</a></li>
+  <li><a href="history.html">History</a></li>
+</ul>
     <h1>On The Road</h1>
+       <div class="image6"><img src="img/navy3.jpg" alt="Ice Cream"><p>Ice cream shop at Navy</p>
+        <img src="img/navy2.jpg" alt="Navy scrimmage"><p>Navy Scrimmage</p>
+           <img src="img/ontheroaduconn.jpg" alt="Uconn 2014"><p>Uconn 2014</p></div>
 
-    <p></p> 
+        <div class="para"><p>During the basketball season the SJU womens travel alot and it is important to keep the trips fun and exciting.</p> </div>
 
     <!-- AND ABOVE HERE -->
     </body>
