--- a/outreach.html
+++ b/outreach.html
@@ -6,16 +6,27 @@
       <title>SJU Womens Basketball</title>
         <header>SJU Womens Basketball</header><!-- DON'T FORGET THE TITLE -->
 
-      <!-- Link to CSS files -->
+      <!-- Link to CSS files --><link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
     <!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
-
+         <ul class="index">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="aboutteam.html">Team</a></li>
+  <li><a href="history.html">History</a></li>
+  <li><a href="ontheroad.html">On the road</a></li>
+</ul>
     <h1>Community Outreach</h1>
-
-    <p></p> 
+<div class="image5">
+    <img src="img/choparobcc.jpg" alt="CHOP"><p>CHOP Cleft Lip Event</p>
+        <img src="img/summercamp.jpg" alt="Summer Camp"><p>Summer Camp 2014</p>
+    <img src="img/kidsclub3.jpg" alt="Kids Club 2014"><p> Kids Club 2014</p></div>
+  <div class="para"> <p>Saint Josephs Womens basketball team takes alot of pride in giving back to the community. Throughout the year they do many different activites to help out. They volunteer at the Childrens Hospital of Philadelphia when there is special events such as CHOP prom. CHOP prom is for kids who may not ever get a chance to go on their school's prom so they hold one at the hospital. Kids get dressed up and have a fun night at the hospital, the basketball team dance the night away with patients and make sure that they are having a great time. CHOP also has special events for different kind of patients so one week they may have a special event for patients with cleft lip, and the players will work stations such as finger painting, making cotton candy and racing kids on the obstacle courses. 
+                </p>
+      <p>Basketball has changed the lives of many people and SJU womens basketball tries to inspire other kids to play basketball as well. Throughout the year they hold multiple clinics and camps to introduce kids to basketball and get them playing. In the summer there is 2, 1 week long camps where kids work on there skills, interact with the players and learn basketball tips and tricks. SJU womens basketball also go to different schools to give them a glimpse of what it is like to be a basketball player at SJU. It is important to get involved with the community, because they are our support system and it is only right to give back to the people that give us so much.  </p></div>
+        <div class="image8"> <img src="img/kidsclub2.jpg" alt="Kids Club"><p>Kids Club 2014</p></div>
 
     <!-- AND ABOVE HERE -->
     </body>
