--- a/ontheroad.html
+++ b/ontheroad.html
@@ -20,10 +20,10 @@
 </ul>
     <h1>On The Road</h1>
        <div class="image6"><img src="img/navy3.jpg" alt="Ice Cream"><p>Ice cream shop at Navy</p>
-        <img src="img/navy2.jpg" alt="Navy scrimmage"><p>Navy Scrimmage</p>
-           <img src="img/ontheroaduconn.jpg" alt="Uconn 2014"><p>Uconn 2014</p></div>
+        <img src="img/navy2.jpg" alt="Navy scrimmage"><p>Navy Scrimmage</p></div>
+      
 
-        <div class="para"><p>During the basketball season the SJU womens travel alot and it is important to keep the trips fun and exciting.</p> </div>
+        <div class="para"><p>During the basketball season the SJU womens travel alot and it is important to keep the trips fun and exciting. Some road trips include a 6 hour bus ride, or getting on 2 different planes ot get to the destination. On the bus the girls keep themselves occupied by watching movies, playing team games, sleeping or bringing school wotk with them. While it is a business trip it is also a great thing to take in the city that you are in and get to experience some of it. When there is free time on the road, the coaches plan fun things for the team to do. While in New York the team went to see mamma mia on broadway. In California we stayed right near the city walk and on new years we got to explore it and get a feel for Cali. When there is long bus rides we take pit stops at different rest stops, and you never know what will happen. On the way to Uconn one year there was an impromptu snowball fight broken out between the team. Being on the road helps everybody bond, because you are on the bus together, you share a room with someone for the night, you really get that family atmosphere of being together. </p> </div><div class="image8"> <img src="img/ontheroaduconn.jpg" alt="Uconn 2014"><p>Uconn 2014</p></div>
 
     <!-- AND ABOVE HERE -->
     </body>
